--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.89.0",
     "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-query-devtools": "^5.91.1",
     "next": "16.0.10",
@@ -30,6 +32,7 @@
     "eslint-plugin-unused-imports": "^4.3.0",
     "prettier": "^3.7.4",
     "prettier-plugin-tailwindcss": "^0.7.2",
+    "supabase": "^2.70.5",
     "tailwindcss": "^4",
     "typescript": "^5",
     "typescript-eslint": "^8.49.0"
